SVN 1.7 plugin to be updated; JavaHL only in internal mode

--- a/plugins/svn4idea/src/META-INF/plugin.xml
+++ b/plugins/svn4idea/src/META-INF/plugin.xml
@@ -1,18 +1,18 @@
 <idea-plugin version="2">
   <name>Subversion 1.7 Experimental Integration</name>
   <id>Subversion 1.7</id>
-  <version>1.0</version>
+  <version>1.0.1</version>
   <category>VCS Integration</category>
+  <idea-version since-build="111.275" until-build="112.999"/>
+  <change-notes>Version 1.0.1 - Added an option for a status operation to be executed with command line client. (for performance reasons)</change-notes>
   <description>This plugin provides only basic support for Subversion 1.7.
-       Many operations are not implemented.
+       Some operations are not implemented.
        Subversion 1.7 integration is not ready yet.
        We do NOT guarantee data safety and consistency.
        Also, we do NOT guarantee that plugin correctly works with Subversion 1.6 and lower working copies!</description>
   <depends>com.intellij.modules.vcs</depends>
-
   <vendor logo="/general/ijLogo.png">JetBrains</vendor>
   <resource-bundle>org.jetbrains.idea.svn17.SvnBundle17</resource-bundle>
-
   <project-components>
     <component>
       <implementation-class>org.jetbrains.idea.svn17.SvnFileUrlMappingImpl17</implementation-class>
