IDEA-80640 setting if include test code and resources into apk

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -323,3 +323,4 @@ android.lint.inspections.add.permission.attribute=Add 'permission' attribute
 android.lint.inspections.add.input.type.attribute=Add 'inputType' attribute
 android.lint.inspections.remove.unnecessary.view=Remove unnecessary view
 android.lint.inspections.replace.with.suggested.characters=Replace with suggested characters
+android.facet.settings.pack.test.sources=Include test code and resources into APK
