--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -296,7 +296,7 @@ project.roots.library.banner.text= {1} ''{0}''
 facet.banner.text=Facet ''{0}''
 project.roots.project.banner.text=General Settings for Project ''{0}''
 project.roots.set.up.jdk.title=Set up {0, choice, 1#Module|2#Project} SDK
-project.roots.no.jdk.on.project.message=Set up created sdk on project?
+project.roots.no.jdk.on.project.message=Set up created SDK on project?
 project.roots.no.jdk.on.project.title=Create SDK
 project.roots.jdks.node.text=JDK stands for the Java Development Kit, a software development package that is required to write, test and debug Java applications. \
   JDK also contains classes and runtime environment that are used to execute the target application. <br><br>\
