--- a/plugins/git4idea/src/META-INF/plugin.xml
+++ b/plugins/git4idea/src/META-INF/plugin.xml
@@ -32,6 +32,8 @@
       <reference id="Vcs.ShowHistoryForBlock"/>
       <separator/>
       <action id="Git.Revert" class="git4idea.actions.GitRevert" text="Revert File" icon="/actions/rollback.png"/>
+      <separator/>
+      <action id="Git.ResolveConflicts" class="git4idea.actions.GitResolveConflictsAction" text="Resolve Conflicts..."/>
     </group>
 
     <group id="GitRepositoryActions">
@@ -40,7 +42,6 @@
 
       <action id="Git.Tag" class="git4idea.actions.GitTag" text="Tag Files..."/>
       <action id="Git.Merge" class="git4idea.actions.GitMerge" text="Merge Changes..." icon="/vcs/mergeSourcesTree.png"/>
-      <action id="Git.ResolveConflicts" class="git4idea.actions.GitResolveConflictsAction" text="Resolve Conflicts..."/>
       <action id="Git.Stash" class="git4idea.actions.GitStash" text="Stash Changes..."/>
       <action id="Git.Unstash" class="git4idea.actions.GitUnstash" text="UnStash Changes..."/>
       <action id="Git.Reset" class="git4idea.actions.GitResetHead" text="Reset HEAD..." icon="/actions/reset.png"/>
