IDEA-80188 In-place rename for it closure parameter

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
@@ -164,3 +164,6 @@ introduce.closure.parameter.elements.header=Adding parameter to a closure
 extract.closure.title=Extract closure
 cannot.process.usage.in.language.{0}=Cannot process usage in {0}
 you.cannot.pass.as.parameter.0.because.you.remove.1.from.base.method=You cannot pass ''{0}'' as parameter because you remove parameter ''{1}'' associated with it from the method. You should deselect "Remove parameter ''{0}'' no longer used" or deselect parameter ''{1}'' in the parameter table.
+rename.groovy.implicit.closure.parameter=Rename implicit closure parameter
+rename.implicit.closure.parameter.to=Rename implicit closure parameter to\:
+implicit.closure.parameter=Implicit closure parameter
