convert to nested ifs intention

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -94,6 +94,11 @@
       <categoryKey>intention.category.boolean</categoryKey>
     </intentionAction>
 
+    <intentionAction>
+      <className>com.siyeh.ipp.trivialif.ConvertToNestedIfIntention</className>
+      <categoryKey>intention.category.boolean</categoryKey>
+    </intentionAction>
+
     <!-- Conditional Operator -->
     <intentionAction>
       <className>com.siyeh.ipp.conditional.FlipConditionalIntention</className>
