--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -29,6 +29,8 @@ expand.boolean.intention.name=Expand boolean use to 'if else'
 expand.boolean.intention.family.name=Expand Boolean
 split.else.if.intention.name=Split 'else if'
 split.else.if.intention.family.name=Split Else If
+convert.to.nested.if.intention.name=Convert to nested ifs
+convert.to.nested.if.intention.family.name=Convert to nested ifs
 join.concatenated.string.literals.intention.name=Join concatenated String literals
 join.concatenated.string.literals.intention.family.name=Join Concatenated String Literals
 replace.switch.with.if.intention.name=Replace 'switch' with 'if'
@@ -185,6 +187,7 @@ flip.setter.call.intention.name=Flip Setter Call
 adapter.to.listener.intention.name=Replace extension of ''{0}'' with ''Listener'' implementation
 obscure.thrown.exceptions.intention.name=Replace with ''throws {0}''
 add.array.creation.expression.intention.name=Add ''new {0}''
+
 
 #categories
 intention.category.annotations=Annotations
