do not paint during revert state in inplace member rename

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -187,3 +187,5 @@ disable.toolwindow.overlayed=true
 disable.toolwindow.overlayed.description=Disable transparent toolwindow stripes
 
 core.pooled.threads=20
+
+editor.dumb.mode.available=true
