--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -776,7 +776,7 @@ action.CloseAllUnmodifiedEditors.text=Close _Unmodified
 action.CloseAllUnmodifiedEditors.description=Close all non-modified editors
 action.CloseAllUnpinnedEditors.text=Close All But Pinned
 action.CloseAllUnpinnedEditors.description=Close all editors which are not pinned
-action.CloseContent.text=Close
+action.CloseContent.text=_Close
 action.CloseContent.description=Close currently focused content
 group.EditorTabsGroup.text=Editor _Tabs
 action.SplitVertically.text=Split _Vertically
