enable compile server from Registry, off by default now

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -126,6 +126,9 @@ compiler.perform.outputs.refresh.on.start.description=Whether to perform initial
 compiler.max.static.constants.searches=10000
 compiler.max.static.constants.searches.description=If the number of changed compile time constants exceeds this value, make will start full-project rebuild
 
+compiler.server.enabled=false
+compiler.server.enabled.description=Enable out-of-process compilation
+
 compiler.server.heap.size=300
 compiler.server.heap.size.description=Heap size value in MB for the compile server process
 
