--- a/resources-en/src/messages/DebuggerBundle.properties
+++ b/resources-en/src/messages/DebuggerBundle.properties
@@ -183,6 +183,7 @@ label.base.renderer.configurable.show.static.final.fields=Static &final fields
 label.base.renderer.configurable.show.declared.type=Declared &type
 label.base.renderer.configurable.show.fq.names=Fully &qualified names
 label.base.renderer.configurable.show.object.id=Object &id
+label.base.renderer.configurable.auto.expressions=Enable auto expressions in Variables view
 label.base.renderer.configurable.alternate.view=Enable alternative view for Coll&ections classes
 label.base.renderer.configurable.enable.tostring=Enable 't&oString()' object view:
 label.base.renderer.configurable.all.overridding=For all classes that override 'toString()' method
