IDEA-76142: Gradle support - cannot update IDEA projects once one of build.gradle files changes
1. Changes infrastructure is re-written in order to not hold references to the changed entities (Module, LibraryOrderEntry etc). Reason: their hash code may be changed on state change (e.g. new binary file registered for the library changes its hash code);
2. Added support for showing conflict nodes at the gradle project structure tree;
3. Corresponding tests have been added;

--- a/plugins/gradle/src/META-INF/plugin.xml
+++ b/plugins/gradle/src/META-INF/plugin.xml
@@ -39,9 +39,10 @@
     <applicationService serviceInterface="org.jetbrains.plugins.gradle.diff.GradleStructureChangesCalculator"
                         serviceImplementation="org.jetbrains.plugins.gradle.diff.GradleProjectStructureChangesCalculator"/>
     <applicationService serviceImplementation="org.jetbrains.plugins.gradle.diff.GradleModuleStructureChangesCalculator"/>
+    <applicationService serviceImplementation="org.jetbrains.plugins.gradle.diff.GradleLibraryStructureChangesCalculator"/>
     <applicationService serviceImplementation="org.jetbrains.plugins.gradle.diff.GradleLibraryDependencyStructureChangesCalculator"/>
     <applicationService serviceInterface="org.jetbrains.plugins.gradle.diff.PlatformFacade"
-                        serviceImplementation="org.jetbrains.plugins.gradle.diff.GradleProjectStructureHelperImpl"/>
+                        serviceImplementation="org.jetbrains.plugins.gradle.diff.PlatformFacadeImpl"/>
     <applicationService serviceInterface="org.jetbrains.plugins.gradle.notification.GradleProgressNotificationManager"
                         serviceImplementation="org.jetbrains.plugins.gradle.notification.GradleProgressNotificationManagerImpl"/>
 
@@ -61,6 +62,9 @@
     </component>
     <component>
       <implementation-class>org.jetbrains.plugins.gradle.sync.GradleProjectStructureChangesModel</implementation-class>
+    </component>
+    <component>
+      <implementation-class>org.jetbrains.plugins.gradle.sync.GradleProjectStructureHelper</implementation-class>
     </component>
   </project-components>
   
