--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -92,7 +92,7 @@ action.name.checkin.directory={0} Directory
 action.name.checkin.file={0} File
 action.name.checkin.directories={0} Directories
 action.name.checkin.files={0} Files
-action.name.commit.project=Comm_it Changes
+action.name.commit.project=Comm&it Changes
 column.name.revision.list.author=Author
 column.name.revisions.list.filter=Date
 column.name.revisions.list.branch=Branch
@@ -269,7 +269,7 @@ changes.newchangelist.warning.already.exists.title=Wrong Changelist Name
 commit.dialog.no.changes.detected.text=No changes detected
 commit.dialog.no.changes.detected.title=Nothing to commit
 commit.dialog.title=Commit Changes
-commit.dialog.default.commit.operation.name=Comm_it
+commit.dialog.default.commit.operation.name=Comm&it
 commit.dialog.include.action.name=Include into commit
 commit.dialog.failed.commit.template=Failed commit: {0}
 commit.dialog.completed.successfully=Completed successfully
