--- a/plugins/ui-designer/ui-designer-new/src/META-INF/plugin.xml
+++ b/plugins/ui-designer/ui-designer-new/src/META-INF/plugin.xml
@@ -3,14 +3,14 @@
   <id>com.intellij.ui-designer-new</id>
   <vendor logo="/general/ijLogo.png">JetBrains</vendor>
 
-  <resource-bundle>messages.UIDesignerBundle</resource-bundle>
+  <resource-bundle>messages.DesignerBundle</resource-bundle>
 
   <depends>com.intellij.java-i18n</depends>
   <depends>com.intellij.properties</depends>
 
   <project-components>
     <component>
-      <implementation-class>com.intellij.uiDesigner.UIDesignerToolWindowManager</implementation-class>
+      <implementation-class>com.intellij.designer.DesignerToolWindowManager</implementation-class>
     </component>
   </project-components>
 
