introduce parameter dialog

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
@@ -167,3 +167,4 @@ you.cannot.pass.as.parameter.0.because.you.remove.1.from.base.method=You cannot 
 rename.groovy.implicit.closure.parameter=Rename implicit closure parameter
 rename.implicit.closure.parameter.to=Rename implicit closure parameter to\:
 implicit.closure.parameter=Implicit closure parameter
+selected.expression.should.not.be.lvalue=Selected expression should not be left hand side of assignment
