--- a/plugins/android/src/META-INF/plugin.xml
+++ b/plugins/android/src/META-INF/plugin.xml
@@ -189,6 +189,12 @@
     <externalAnnotator language="JAVA" implementationClass="org.jetbrains.android.inspections.lint.AndroidLintExternalAnnotator"/>
     <externalAnnotator language="XML" implementationClass="org.jetbrains.android.inspections.lint.AndroidLintExternalAnnotator"/>
     <externalAnnotator language="TEXT" implementationClass="org.jetbrains.android.inspections.lint.AndroidLintExternalAnnotator"/>
+
+    <compileServer.plugin jar-path="jps/android-jps-plugin.jar"/>
+    <compileServer.plugin jar-path="android-rt.jar"/>
+
+    <compileServer.plugin jar-path="sdklib.jar"/>
+    <compileServer.plugin jar-path="../../../../../community/plugins/android/lib/sdklib.jar"/>
   </extensions>
 
   <extensionPoints>
