File Encoding Macro (useful for external encoding converters, like iconv)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -449,6 +449,7 @@ macro.file.directory.relative=File directory relative to the project file
 macro.file.directory.relative.fwd.slash=File directory relative to the project file (with forward slashes)
 macro.file.path.relative=File path relative to the project file
 macro.file.path.relative.fwd.slash=File path relative to the project file (with forward slashes)
+macro.file.encoding=File encoding
 macro.javadoc.output.directory=JavaDoc output directory
 macro.jdk.path=JDK path
 macro.line.number=Line number
