fix tests: provide path for community output directory

--- a/plugins/android/src/META-INF/plugin.xml
+++ b/plugins/android/src/META-INF/plugin.xml
@@ -198,6 +198,7 @@
 
     <compileServer.plugin jar-path="sdklib.jar"/>
     <compileServer.plugin jar-path="../../../../../community/plugins/android/lib/sdklib.jar"/>
+    <compileServer.plugin jar-path="../../../../../plugins/android/lib/sdklib.jar"/>
   </extensions>
 
   <extensionPoints>
