vcs: Added unversioned files count displaying to the commit legend panel on "Commit Changes" dialog

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -303,6 +303,7 @@ checkbox.changelist.move.offer=Suggest to move uncommitted changes &to another c
 commit.legend.modified=Modified:
 commit.legend.new=New:
 commit.legend.deleted=Deleted:
+commit.legend.unversioned=Unversioned:
 
 changes.view.dnd.label={0} file(s)
 error.executing.commit=Error executing ''{0}'': {1}
