Added `Convert to Operator` Groovy inspection

--- a/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -46,7 +46,9 @@ parameter.can.be.final.tooltip=Parameter ''{0}'' can be final
 groovy.probable.bugs=Probable bugs
 equals.between.inconvertible.types='equals()' between objects of inconvertible types
 equals.between.inconvertible.types.tooltip=<code>{0}</code> between objects of inconvertible types ''{1}'' and ''{2}''
-
+convert.to.operator=Change to operator
+convert.to.operator.double.negation.option=Use double negation (i.e. !!)
+convert.to.operator.compareto.equality.option=Change compareTo equality to equals (i.e. ==)
 unassigned.access=Variable Not Assigned
 unassigned.access.short.name=VariableNotAssigned
 unassigned.access.tooltip=Variable ''{0}'' might not be assigned
@@ -61,7 +63,7 @@ no.type.specified=No type specified
 dynamic.element=Dynamic Element
 
 ########################################################################################################################
-# InpectorGroovy properties
+# InspectorGroovy properties
 ########################################################################################################################
 pointless.boolean.problem.descriptor=#ref can be simplified to ''{0}'' #loc
 pointless.arithmetic.error.message=#ref can be replaced with ''{0}'' #loc
