--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -549,6 +549,7 @@ checkbox.font.italic=Italic
 label.font.type=Font
 label.inherit.attributes=Use inherited attributes
 title.diff=Diff \\& Merge
+title.vcs=VCS
 title.file.status=File Status
 title.scope.based=By Scope
 title.colors.and.fonts=Colors \\& Fonts
