[vcs-log] keep log up-to-date (if it is started at all)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -262,6 +262,7 @@ vcs.log.linear.bek.sort=false
 vcs.log.square.labels=false
 vcs.log.recent.commits.count=1000
 vcs.log.open.another.log.visible=false
+vcs.log.keep.up.to.date=false
 
 vcs.executable.validator.timeout.sec=60
 vcs.unversioned.files.in.commit=true
