--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -548,7 +548,7 @@ checkbox.font.bold=Bold
 checkbox.font.italic=Italic
 label.font.type=Font
 label.inherit.attributes=Use inherited attributes
-title.diff=Diff
+title.diff=Diff \\& Merge
 title.file.status=File Status
 title.scope.based=By Scope
 title.colors.and.fonts=Colors \\& Fonts
