Add a registry key to select daltonization algotihm

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -43,6 +43,7 @@ actionSystem.enableAbbreviations=true
 actionSystem.extendedKeyCode.disabled=false
 
 color.blindness.icon.filter=false
+color.blindness.daltonization=false
 
 ide.debugMode=false
 
