IDEA-149395 Add ability to show wide background for track

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -112,6 +112,7 @@ ide.smart.horizontal.scrolling=true
 ide.scroll.new.layout=true
 ide.scroll.align.component=false
 ide.scroll.background.auto=false
+ide.scroll.background.wide=false
 ide.scroll.bar.expand.animation=false
 ide.scroll.track.border.paint=false
 ide.scroll.thumb.border.rounded=false
