IDEA-149210 Rework IDE notifications

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -469,6 +469,7 @@ cvs.roots.refresh.uses.vfs.description=Should CVS roots refresh after update use
 vcs.add.remove.silent=true
 
 ide.new.notification.enabled=false
+ide.new.notification.visible.count=2
 
 ide.open.file.in.temp.project.dir=true
 ide.open.file.in.temp.project.dir.description=Enables opening file in temp project directory
