IG: warn on synchronization on class

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1044,6 +1044,7 @@ synchronized.on.possibly.literal.object.problem.descriptor=Synchronization on {0
 synchronize.on.non.final.field.problem.descriptor=Synchronization on a non-final field <code>#ref</code> #loc
 synchronized.on.literal.object.warn.on.all.option=Warn on all possible literals
 synchronize.on.this.problem.descriptor=Lock operations on 'this' may have unforeseen side-effects #loc
+synchronize.on.class.problem.descriptor=Lock operations on a class may have unforeseen side-effects #loc
 nested.synchronized.statement.problem.descriptor=Nested <code>#ref</code> statement #loc
 empty.synchronized.statement.problem.descriptor=Empty <code>#ref</code> statement #loc
 non.synchronized.method.overrides.synchronized.method.problem.descriptor=Unsynchronized method <code>#ref()</code> overrides synchronized method #loc
