IDEA-153464 fix a typo in TODO pre-commit warning message
(cherry picked from commit f6f773cd868de125ef39cfb344d75f29da748275)

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -581,7 +581,7 @@ todo.handler.only.in.changed=<html><body>{0,choice, 1#One|2#{0}} TODO {0,choice,
                              {1,choice, 0#|1#One file was skipped.|2#{1} files were skipped.}</body></html>
 todo.handler.only.both=<html><body>{0, choice, 1#One|2#{0}} added/edited TODO {0,choice, 1#item|2#items},<br/>\
                        and {1, choice, 1#one item|2#{1} items} located in changed fragments were found.<br/>\
-                       Would you like to review them?<br/[\
+                       Would you like to review them?<br/>\
                        {2,choice, 0#|1#One file was skipped.|2#{2} files were skipped.}</body></html>
 
 paths.affected.in.revision=Paths Affected in Revision {0}
