avoid duplications inside conflict message (IDEA-153450)

--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -687,7 +687,7 @@ method.0.will.implement.method.of.the.base.class=Method {0} will implement \na m
 method.0.will.override.a.method.of.the.base.class=Method {0} will override \na method of the base class {1}
 current.class=current class
 field.0.is.already.defined.in.the.1=Field {0} is already defined in the {1}
-field.0.will.hide.field.1.of.the.base.class=Field {0} will hide \na field {1} of the base class {2}
+field.0.will.hide.field.1.of.the.base.class=Field {0} will hide \na field {1} of the base {2}
 directory.0.already.contains.1.named.2=Directory {0} \nalready contains {1} named ''{2}''
 directory.0.already.contains.a.file.named.1=Directory {0} \nalready contains a file named ''{1}''
 getter.and.setter.methods.found.for.the.field.0=Getter and setter methods found for the field {0}. \n{1} them as well?
