--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1214,6 +1214,7 @@ inline.call.quickfix=Inline call
 inline.variable.quickfix=Inline variable
 pointless.nullcheck.display.name=Unnecessary 'null' check before 'instanceof' expression
 pointless.nullcheck.problem.descriptor=Unnecessary 'null' check before 'instanceof' expression
+pointless.nullcheck.after.problem.descriptor=Unnecessary 'null' check after 'instanceof' expression
 pointless.nullcheck.simplify.quickfix=Remove unnecessary ''{0}'' condition
 introduce.constant.quickfix=Introduce constant
 make.initialization.explicit.quickfix=Make initialization explicit
