IG: new "Synchronization on 'getClass()'" inspection

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -2175,3 +2175,5 @@ optional.contains.collection.problem.descriptor='Optional' contains collection <
 optional.contains.array.problem.descriptor='Optional' contains array <code>#ref</code>
 optional.get.without.is.present.display.name='Optional.get()' without 'isPresent()' check
 optional.get.without.is.present.problem.descriptor=<code>{0}.#ref()</code> without ''isPresent()'' check
+synchronization.on.get.class.display.name=Synchronization on 'getClass()'
+synchronization.on.get.class.problem.descriptor=Synchronization on <code>#ref()</code> #loc
