--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -468,6 +468,9 @@ cvs.roots.refresh.uses.vfs=true
 cvs.roots.refresh.uses.vfs.description=Should CVS roots refresh after update use VFS
 vcs.add.remove.silent=true
 
+ide.ui.scale.override=false
+ide.ui.scale=1.0
+
 ide.new.notification.enabled=false
 ide.new.notification.visible.count=2
 
