angular ui diagram, make it available through registry key "angular.js.ui.router.diagram"

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -726,3 +726,6 @@ dumb.aware.run.configurations.description=Enable executing run configurations in
 
 focus.follows.mouse.workarounds=false
 focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-follows-mouse issues, like IDEA-112015
+
+angular.js.ui.router.diagram=false
+angular.js.ui.router.diagram.description=Enables AngularJS ui-router states&views diagram action
