--- a/resources-en/src/messages/QuickFixBundle.properties
+++ b/resources-en/src/messages/QuickFixBundle.properties
@@ -283,3 +283,6 @@ add.exception.from.field.initializer.to.constructor.throws.family.text=Add excep
 java.8.collections.api.inspection.description=If statement could be replaced with single method
 java.8.collections.api.inspection.fix.family.name=Replace with single method call
 java.8.collections.api.inspection.fix.text=Replace with ''{0}'' method call
+
+wrap.with.optional.parameter.text=Wrap {0, choice, 1#1st|2#2nd|3#3rd|4#{0,number}th} parameter using ''java.util.Optional''
+wrap.with.optional.single.parameter.text=Wrap using 'java.util.Optional'
