js.debugger.fix.jspm.source.maps (cherry picked from commit a32ee1f)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -551,6 +551,7 @@ js.debugger.name.mappings.by.source.code=false
 js.debugger.v8.log=
 js.debugger.wip.log=
 js.debugger.member.filter.prefer.vm.source=false
+js.debugger.fix.jspm.source.maps=false
 
 js.index.node.submodules=false
 
