js.debugger.fix.jspm.source.maps

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -556,6 +556,7 @@ nodejs.debugger.use.jb.support=true
 js.debugger.name.mappings.by.source.code=false
 js.debugger.v8.log=
 js.debugger.wip.log=
+js.debugger.fix.jspm.source.maps=false
 
 js.index.node.submodules=false
 
