--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -548,6 +548,7 @@ js.debugger.v8.use.any.breakpoint=true
 js.debugger.chrome.use.any.breakpoint=true
 nodejs.debugger.use.jb.support=true
 js.debugger.name.mappings.by.source.code=false
+js.debugger.map.this.by.source.code=false
 js.debugger.v8.log=
 js.debugger.wip.log=
 js.debugger.member.filter.prefer.vm.source=false
