OC-13252 Multiple issues when using shared DerivedData folder in AppCode and Xcode simultaneously
# Conflicts:
#	platform/util/resources/misc/registry.properties

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -723,3 +723,6 @@ dumb.aware.run.configurations.description=Enable executing run configurations in
 
 focus.follows.mouse.workarounds=false
 focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-follows-mouse issues, like IDEA-112015
+
+cidr.xcode.derived.data.override=true
+cidr.xcode.derived.data.override.description=Ignore Xcode DerivedData location settings
