OC-13252 Multiple issues when using shared DerivedData folder in AppCode and Xcode simultaneously

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -729,3 +729,6 @@ focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-f
 
 angular.js.ui.router.diagram=false
 angular.js.ui.router.diagram.description=Enables AngularJS ui-router states&views diagram action
+
+cidr.xcode.derived.data.override=true
+cidr.xcode.derived.data.override.description=Ignore Xcode DerivedData location settings
