--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -183,7 +183,7 @@ ide.perProjectModality.description=New modality approach. All dialogs are DOCUME
 ide.mac.retina.disableDrawingFix=false
 
 ide.mac.fix.font.fallback=false
-ide.mac.fix.font.fallback.description=Fix font fallback mechanism by using a more elaborate procedure to check whether specific font can display a particular character (when Apple JDK is used)
+ide.mac.fix.font.fallback.description=Fix font fallback mechanism by using a more elaborate procedure to check whether specific font can display a particular character
 
 debugger.showTypes=true
 debugger.showTypes.description=Show types in variables tree
