--- a/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -101,6 +101,7 @@ anonymous.class=anonymous class
 closure=closure
 other.scope=Other scope
 method.may.be.static=Method may be static
+method.may.be.static.option.ignore.trait.methods=Ignore trait methods
 method.may.be.static.only.private.or.final.option=Only check final or private methods
 method.may.be.static.ignore.empty.method.option=Ignore empty methods
 have.instance.refs.in.closure=(have instance references inside closure)
