--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -264,6 +264,7 @@ vcs.log.recent.commits.count=1000
 vcs.log.open.another.log.visible=false
 
 vcs.executable.validator.timeout.sec=60
+vcs.unversioned.files.in.commit=false
 
 psi.incremental.reparse.depth.limit=1000
 psi.deferIconLoading=true
