--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -109,7 +109,7 @@ ide.tree.deferred.icon.invalidates.cache=true
 ide.splitter.mouseZone=6
 ide.smart.horizontal.scrolling=true
 ide.scroll.new.layout=true
-ide.scroll.align.component=false
+ide.scroll.align.component=true
 ide.scroll.background.auto=false
 ide.scroll.bar.expand.animation=false
 ide.scroll.track.border.paint=false
