--- a/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/groovy-psi/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -123,5 +123,5 @@ highlight.assignments.from.void=Highlight assignments from void type
 comments.count.as.content=Comments count as content
 ignore.when.catch.parameter.is.named.ignore.or.ignored=Ignore when catch parameter is named ignore or ignored
 no.applicable.signature.found=No applicable signature found
-expected.type.0=Expected {0}
+expected.type.0=Expected ''{0}'', found ''{1}''
 declare.explicit.implementations.of.trait=Declare explicit implementations of trait
