--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -438,6 +438,7 @@ search.everywhere.settings=false
 svn.use.incoming.optimization=false
 svn.lowest.supported.format.for.command.line=1.7.0
 svn.use.svnkit.for.https.server.certificate.check=true
+svn.use.sqlite.jdbc=false
 
 completion.enable.relevant.method.chain.suggestions=false
 ide.mac.message.sheets.java.emulation=false
