--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -117,7 +117,7 @@ ide.scroll.bar.expand.animation=false
 ide.scroll.track.border.paint=false
 ide.scroll.thumb.border.rounded=false
 ide.scroll.thumb.small.if.opaque=true
-mac.scroll.new.ui=false
+mac.scroll.new.ui=true
 
 ide.tooltip.callout=true
 ide.tooltip.animationCycle=150
