--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -1624,17 +1624,12 @@
       <add-to-group group-id="RefactoringMenu"/>
     </action>
 
-    <group id="Internal.Groovy" text="Groovy" popup="true" internal="true">
-      <action id="DumpGroovyControlFlowAction"
-              class="org.jetbrains.plugins.groovy.actions.DumpGroovyControlFlowAction"
-              text="dump groovy control flow"
-              description="" internal="true"/>
-      <action id="DumpGroovyStubsAction"
-              class="org.jetbrains.plugins.groovy.actions.DumpGroovyStubsAction"
-              text="dump groovy stubs"
-              description="" internal="true"/>
+    <action id="DumpGroovyControlFlowAction"
+            class="org.jetbrains.plugins.groovy.actions.DumpGroovyControlFlowAction"
+            text="dump groovy control flow"
+            description="" internal="true">
       <add-to-group group-id="Internal"/>
-    </group>
+    </action>
 
     <action id="ExcludeFromStubGeneration"
             class="org.jetbrains.plugins.groovy.compiler.ExcludeFromStubGenerationAction"
