--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1181,7 +1181,7 @@ checkbox.allow.line.numbers=Allow Line Numbers
 checkbox.allow.vcs.annotations=Allow VCS Annotations
 presentation.mode.fon.size=Font size\:
 
-loading.editors=Loading files...
+loading.editors=Opening editors...
 
 new.dir.project.title=Create New Project
 new.dir.project.chooser.title=Select Location for Project Directory
