--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -330,8 +330,8 @@ ide.completion.middle.matching.description=Suggest items in completion that cont
 ide.completion.lookup.element.preselect.depends.on.context=true
 ide.completion.lookup.element.preselect.depends.on.context.description=Preselection of the first element in completion list depends on context
 
-ide.completion.variant.limit=500
-ide.completion.variant.limit.description=The approximate number of most relevant variants shown in the completion list
+ide.completion.variant.limit=1000
+ide.completion.variant.limit.description=Completion list will never show a number of (most relevant) items >= this number
 
 ide.goto.middle.matching=true
 ide.goto.middle.matching.description=Suggest items in goto actions that contain the entered string somewhere in the middle.
