--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -597,7 +597,7 @@ comparison.to.nan.display.name=Comparison to Double.NaN or Float.NaN
 instance.method.naming.convention.display.name=Instance method naming convention
 instance.method.naming.convention.element.description=Instance method
 unnecessary.semicolon.display.name=Unnecessary semicolon
-fallthru.in.switch.statement.display.name=Fall-through in 'switch' statement
+fallthru.in.switch.statement.display.name=Fallthrough in 'switch' statement
 call.to.native.method.while.locked.display.name=Call to a native method while locked
 switch.statement.display.name='switch' statement
 custom.classloader.display.name=Custom ClassLoader
@@ -873,7 +873,7 @@ divide.by.zero.problem.descriptor=Division by zero #loc
 non.reproducible.math.call.problem.descriptor=<code>Math.#ref()</code> may produce non-reproducible results #loc
 constant.math.call.problem.descriptor=Constant call to <code>#ref()</code> can be simplified #loc
 floating.point.equality.problem.descriptor=<code>#ref</code>: floating point values compared for exact equality #loc
-fallthru.in.switch.statement.problem.descriptor=<code>#ref</code> fall-through in 'switch' statement #loc
+fallthru.in.switch.statement.problem.descriptor=Fallthrough in 'switch' statement #loc
 switch.statements.without.default.problem.descriptor=<code>#ref</code> statement without 'default' branch #loc
 default.not.last.case.in.switch.problem.descriptor=<code>#ref</code> branch not last case in 'switch' statement #loc
 loop.statements.that.dont.loop.problem.descriptor=<code>#ref</code> statement does not loop #loc
