[platform] IDE update strategy reworked
- the concept of a 'new channel' dropped; no confusing "new channel" dialog anymore (IDEA-144121)
- updates are not restricted by a major version (IDEA-153386)
- ability added to target updates for specific builds on a server side
- UI tweaks (stable channel decription changed; ignored builds editing added)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -906,7 +906,6 @@ updates.error.connection.failed=Connection failed ({0}). Please check network co
 updates.error.plugin.description.failed=Failed to load plugin descriptions from: \"{0}\"
 update.notifications.title=Platform and Plugin Updates
 update.notifications.group=Platform and Plugin Updates
-updates.channel.name.message=<b>{0}</b>: {1}
 updates.channel.bundled.key=The new version has an expiration date and does not require a license key.
 updates.fallback.build=You have perpetual fallback license for the new version.
 updates.subscription.active.till=Your subscription is active until {0}.
@@ -935,9 +934,11 @@ updates.settings.check.now.button=&Check Now
 updates.settings.checkbox=Automatically check updates for
 updates.settings.unstable=Please note that this channel is less stable than your current one.
 updates.settings.secure=Use secure connection
-updates.settings.build.number=Build number:
-updates.settings.current.version=Current version:
-updates.settings.last.check=Last checked:
+updates.settings.build.number=Build number
+updates.settings.current.version=Current version
+updates.settings.last.check=Last checked
+updates.settings.ignored=View/edit Ignored builds
+updates.settings.ignored.title=Ignored Builds
 update.plugin.host.url.message=Repository URL:
 update.no.update.hosts=No plugin repositories configured
 update.edit.plugin.host.title=Edit Repository
