enable new notifications UI

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -472,7 +472,7 @@ vcs.add.remove.silent=true
 ide.ui.scale.override=false
 ide.ui.scale=1.0
 
-ide.new.notification.enabled=false
+ide.new.notification.enabled=true
 ide.new.notification.visible.count=2
 
 ide.open.file.in.temp.project.dir=true
