--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -956,6 +956,7 @@ finally.block.cannot.complete.normally.problem.descriptor=<code>#ref</code> bloc
 empty.try.block.problem.descriptor=Empty <code>#ref</code> block #loc
 throw.from.finally.block.problem.descriptor=<code>#ref</code> inside 'finally' block #loc
 possible.throw.from.finally.block.problem.descriptor=<code>{0}</code> might be thrown inside ''finally'' block #loc
+throw,from.finally.block.everywhere.option=Warn everywhere declared exceptions may be thrown
 throw.caught.locally.problem.descriptor=<code>#ref</code> caught by containing 'try' statement #loc
 throw.caught.locally.ignore.option=Ignore rethrown exceptions
 return.from.finally.block.problem.descriptor=<code>#ref</code> inside 'finally' block #loc
