IDEA-153844 Switch off line numbers works for current editor only

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1451,6 +1451,10 @@ action.CreateLauncherScript.description=Create a script for opening files and pr
 action.CreateDesktopEntry.text=Create Desktop Entry...
 action.CreateDesktopEntry.description=Create a desktop entry for integration with system application menu
 group.EditorGutterPopupMenu.text=Editor Gutter Popup Menu
+action.EditorGutterToggleGlobalSoftWraps.text=Soft-Wrap All Files
+action.EditorGutterToggleLocalSoftWraps.gutterText=Soft-Wrap Current File
+action.EditorGutterToggleGlobalLineNumbers.text=Show Line Numbers
+action.EditorGutterToggleGlobalIndentLines.text=Show Indent Guides
 action.ExcludeFromProject.text=Exclude From Project...
 group.MarkFileAs.text=Mark File As
 action.MarkAsPlainTextAction.text=Mark as Plain Text
