introduce parameter object: initial

--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -797,3 +797,6 @@ introduce.functional.parameter.title=Extract Functional Parameter
 introduce.parameter.convert.lambda=&Convert to functional expression
 
 expand.method.reference.warning=Method is used in method reference. Proceeding would result in conversion to lambda expression
+refactoring.introduce.parameter.object.references.to.be.modified=References to be modified
+refactoring.introduce.parameter.object.method.whose.parameters.are.to.wrapped=Method whose parameters are to wrapped
+refactoring.introduce.parameter.object.command.name=Introduced parameter class {0} for {1}()
