better names for 'duplicate' actions (following IDEA-154167)

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -159,8 +159,8 @@ action.EditorKillToWordStart.text=Kill to Word Start
 action.EditorKillToWordEnd.text=Kill to Word End
 action.EditorKillRegion.text=Kill Selected Region
 action.EditorKillRingSave.text=Save to Kill Ring
-action.EditorDuplicate.text=Duplicate Line or Block
-action.EditorDuplicateLines.text=Duplicate Lines
+action.EditorDuplicate.text=Duplicate Line or Selection
+action.EditorDuplicateLines.text=Duplicate Entire Lines
 action.EditorSelectWord.text=Extend Selection
 action.EditorUnSelectWord.text=Shrink Selection
 action.EditorToggleInsertState.text=Toggle Insert/Overwrite
