--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -937,7 +937,7 @@ updates.settings.secure=Use secure connection
 updates.settings.build.number=Build number
 updates.settings.current.version=Current version
 updates.settings.last.check=Last checked
-updates.settings.ignored=View/edit Ignored builds
+updates.settings.ignored=View/edit ignored builds
 updates.settings.ignored.title=Ignored Builds
 update.plugin.host.url.message=Repository URL:
 update.no.update.hosts=No plugin repositories configured
