--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -316,8 +316,8 @@ inspection.unused.symbol.check.methods=Check &Methods
 inspection.unused.symbol.check.classes=Check &Classes
 inspection.unused.symbol.check.parameters=Check &Parameters
 
-inspection.results.for.profile.toolwindow.title=Results for Inspection Profile ''{0}''
-inspection.results.for.inspection.toolwindow.title=Results for Inspection ''{0}''
+inspection.results.for.profile.toolwindow.title=''{0}'' Profile on {1}
+inspection.results.for.inspection.toolwindow.title=''{0}'' Inspection on {1}
 inspection.export.results.invalidated.item=invalidated item
 inspection.export.results.at.line=at line
 
@@ -712,3 +712,5 @@ todo.comment.problem.descriptor=TODO comment <code>#ref</code> #loc
 long.line.display.name=Line is longer than allowed by code style
 
 inspection.default.annotation.param=Default annotation parameter value
+inspection.tool.window.stripe.title.single.content=Inspection Results of
+inspection.tool.window.stripe.title.multiple.content=Inspection Results
