--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1018,7 +1018,7 @@ message.server.no.licenses=No suitable licenses left on the license server
 title.server.no.licenses=No Licenses on Server
 message.server.not.available=Unable to contact license server
 title.server.not.available=License Server Connection Error
-message.server.protocol.hijacked=License Server response haven''t passed data integrity check: {0}
+message.server.protocol.hijacked=License Server response has not passed data integrity check: {0}
 title.server.protocol.hijacked=Problem with License Server Response
 
 text.not.applicable=<N/A>
