Rename Refactoring: fallback to dialog rename if there are too many references

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -523,6 +523,7 @@ ide.inertial.mouse.fix.description=See IDEA-71508
 ide.log.focuses=false
 ide.log.focuses.description=Enables logging of focuses (Time consuming)
 
+inplace.rename.segments.limit=200
 emmet.segments.limit=50
 emmet.template.length.limit.kilobytes=15
 command.line.execution.timeout=30
